# Thesis

./: README.md
install/: local_setup.sh  setup.sh
install/arm_control/lib/arm_control/: arm_control
install/arm_control/share/arm_control/: package.sh  package.xml
install/arm_transforms/share/arm_transforms/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/arduino_tests/12_test/: 12_test.ino
src/arduino_tests/BLE_IMU_rpy2quaternion/: BLE_IMU_rpy2quaternion.ino
src/arduino_tests/calibrate_2/: calibrate_2.ino
src/arduino_tests/finger_control/: FingerLib_mod.cpp  FingerLib_mod.h  finger_control.ino
src/arduino_tests/finger_control_test_nano/: finger_control_test_nano.ino
src/arduino_tests/input_filter_buffer/: CircleBuffer.h  input_filter_buffer.ino
src/arduino_tests/motor_test1/: motor_test1.ino
src/arduino_tests/output_finger_pos/: finger_ble_receive.py  output_finger_pos.ino
src/arduino_tests/perinphical_all/: perinphical_all.ino
src/arduino_tests/perinphical_imu_strain/: perinphical_imu_strain.ino
src/arduino_tests/strain_filtered_gpt/: strain_filtered_gpt.ino
src/arduino_tests/test_receive_data/: test_receive_data.ino
src/arm_control/: setup.py
src/arm_transforms/: CMakeLists.txt  frames_2024-06-13_22.01.54.gv
src/arm_transforms/src/: base2shoulder.cpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_ble_package/: package.xml  setup.cfg  setup.py
src/my_ble_package/my_ble_package/: ble_client_node.py  imu_client_node.py
(+10 files in other folders)
