<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_ble_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nazar@todo.todo">nazar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>bleak</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>
  <!-- <exec_depend>bleak</exec_depend> -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
